// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIAutocompleter has data-automationid set on the input, list, dropdown and container 1`] = `
<div
  className=""
  data-automationid="baseAC--container"
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid="baseAC--dropdown"
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid="baseAC--input"
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid="baseAC--input--input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter inserts the searchValue inside the input 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value="a"
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should not add padding classes to the input when pills prop is an empty array 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the input element when passed in the inputClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="test-class xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the root node when passed in the className prop 1`] = `
<div
  className="test-class"
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the trigger element when passed in the triggerClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className="test-class"
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a placeholder inside the input when passed in 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      >
        Search
      </div>
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder="Search"
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the input when a value is passed to the inputId prop 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id="test-inputId"
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the root node when passed in the id prop 1`] = `
<div
  className=""
  data-automationid={null}
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render as disabled when isDisabled prop is true 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput xui-textinput-is-disabled"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            maxLength={undefined}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value={undefined}
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should respect a max length of the input value when the maxLength has a value 1`] = `
<div
  className=""
  data-automationid={null}
  id={undefined}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="dropdown-toggled-wrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    onKeyDown={[Function]}
  >
    <div
      aria-activedescendant={null}
      aria-controls={undefined}
      aria-haspopup={true}
      className={undefined}
      onClick={[Function]}
      onFocus={null}
      onKeyDown={[Function]}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
      >
        <label
          className="xui-textinput"
          data-automationid={null}
        >
          <input
            className="xui-autocompleter--textinput xui-textinput--input"
            data-automationid={null}
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength={5}
            onBlurCapture={[Function]}
            onChange={undefined}
            onFocusCapture={[Function]}
            placeholder={undefined}
            rows={undefined}
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            type={undefined}
            value="123456"
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;
